<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScoreActivity">

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/colorPrimary"
        android:onClick="resetScores"
        android:text="@string/reset_button_label"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/scores_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/reset_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/team_a_label"
                android:textColor="#616161"
                android:textSize="14sp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/team_a_score_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:fontFamily="sans-serif-light"
                android:textColor="@android:color/black"
                android:textSize="56sp"
                tools:text="0" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/team_a_three_points_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@color/colorPrimary"
                android:onClick="addThreePoints"
                android:text="@string/three_points_button_label"
                android:textColor="@android:color/white" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/team_a_two_points_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@color/colorPrimary"
                android:onClick="addTwoPoints"
                android:text="@string/two_points_button_label"
                android:textColor="@android:color/white" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/team_a_free_throw_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:onClick="addFreeThrow"
                android:text="@string/free_throw_button_label"
                android:textColor="@android:color/white" />


        </android.support.v7.widget.LinearLayoutCompat>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/team_b_label"
                android:textColor="#616161"
                android:textSize="14sp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/team_b_score_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:fontFamily="sans-serif-light"
                android:textColor="@android:color/black"
                android:textSize="56sp"
                tools:text="0" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/team_b_three_points_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@color/colorPrimary"
                android:onClick="addThreePoints"
                android:text="@string/three_points_button_label"
                android:textColor="@android:color/white" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/team_b_two_points_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@color/colorPrimary"
                android:onClick="addTwoPoints"
                android:text="@string/two_points_button_label"
                android:textColor="@android:color/white" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/team_b_free_throw_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:onClick="addFreeThrow"
                android:text="@string/free_throw_button_label"
                android:textColor="@android:color/white" />

        </android.support.v7.widget.LinearLayoutCompat>


    </android.support.v7.widget.LinearLayoutCompat>

</android.support.constraint.ConstraintLayout>